--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.20.2",
+    "@emailjs/browser": "^3.10.0",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.25.0",
@@ -17,6 +18,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "canvas-confetti": "^1.6.0",
+    "emailjs": "^4.0.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
